err/smartchangelog.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/smartchangelog'...
Compiling './lib/python3.5/site-packages/smartchangelog/changelog.py'...
***   File "./lib/python3.5/site-packages/smartchangelog/changelog.py", line 15
    self._parent: 'Node' = None
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/smartchangelog/commit.py'...
***   File "./lib/python3.5/site-packages/smartchangelog/commit.py", line 11
    id: str
      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/smartchangelog/commitmsg.py'...
***   File "./lib/python3.5/site-packages/smartchangelog/commitmsg.py", line 36
    type: CommitType
        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/smartchangelog/scripts'...
Listing './lib/python3.5/site-packages/smartchangelog-0.1.2.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/integration'...
Listing './lib/python3.5/site-packages/tests/unit'...
Listing './share'...
Listing './share/python-wheels'...
